cart z-index fix

--- a/styles/cart.module.css
+++ b/styles/cart.module.css
@@ -8,7 +8,7 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6.5px);
   -webkit-backdrop-filter: blur(6.5px);
-
+  z-index: 4;
 }
 
 .cart {
@@ -22,6 +22,7 @@
   right: 0;
   width: 500px;
   height: 100vh;
+
   /* overflow: scroll; */
 }
 
